--- a/customer_service/templates/customer_service/service_request_detail.html
+++ b/customer_service/templates/customer_service/service_request_detail.html
@@ -1,3 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}Service Request Detail{% endblock %}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{% static 'customer_service/css/timeline.css' %}" rel="stylesheet">
+</head>
+<body>
+
 <div class="card-body">
     <ul class="timeline">
         <li class="timeline-item">
@@ -90,3 +101,5 @@
 </div>
 </div>
 {% endblock %}
+</body>
+</html>
